force-app/main/default/objects/API_Customer_Read_Items__c/API_Customer_Read_Items__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains API call definitiions for customer read-only items returned when searching/viewing an individual customer. Prefix Name field with number to determine display order.</description>
    <label>API Customer Read Items</label>
</CustomObject>