force-app/main/default/objects/API_Customer_Read_Items__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether API call should be made for the item and data displayed.</description>
    <inlineHelpText>Determines whether API call should be made for the item and data displayed.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>