force-app/main/default/objects/API_Customer_Read_Items__c/fields/Display_as_Table__c.field-meta.xml
<CustomField>
    <fullName>Display_as_Table__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether data returned from api call is a list of one or more records and should therefore be displayed in a table. If not selected, it assumed that a single record form display is required.</description>
    <inlineHelpText>Indicates whether data returned from api call is a list of one or more records and should therefore be displayed in a table. If not selected, it assumed that a single record form display is required.</inlineHelpText>
    <label>Display as Table</label>
    <type>Checkbox</type>
</CustomField>