force-app/main/default/objects/API_Customer_Read_Items__c/fields/Item_Label__c.field-meta.xml
<CustomField>
    <fullName>Item_Label__c</fullName>
    <description>Label to appear as section title for the particular API call</description>
    <inlineHelpText>Label to appear as section title for the particular API call</inlineHelpText>
    <label>Item Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>