force-app/main/default/objects/API_Customer_Read_Items__c/fields/Property_Items__c.field-meta.xml
<CustomField>
    <fullName>Property_Items__c</fullName>
    <description>Comma separated list of dynamic property items (xml tag names) to be included in read only display.</description>
    <inlineHelpText>Comma separated list of dynamic property items (xml tag names) to be included in read only display.</inlineHelpText>
    <label>Property Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>