force-app/main/default/objects/API_Customer_Read_Items__c/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>NAME</columns>
    <columns>Item_Label__c</columns>
    <columns>Display_as_Table__c</columns>
    <columns>Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Property_Items__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
    <language>en_US</language>
</ListView>